src/objects/Web_Service_Logic_MERC__c.object
<CustomObject>
    <description>Object used to drive the Mercury Web Service RSVP and HCP Information Package logic.  Determines the modals that are displayed based upon the multiple scenarios for a HCP using the Web Service and interacting with Meetings.Oliver Dunford 12th May 2014.</description>
    <fields>
        <fullName>Account_Record_Type_MERC__c</fullName>
        <description>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part. Not used to lookup and return the values, only the Key is used for this. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part.</inlineHelpText>
        <label>Account Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Air_Required_MERC__c</fullName>
        <description>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part. Not used to lookup and return the values, only the Key is used for this. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part.</inlineHelpText>
        <label>Air Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_MERC__c</fullName>
        <description>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part. Not used to lookup and return the values, only the Key is used for this. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part.</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hotel_Required_MERC__c</fullName>
        <description>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part. Not used to lookup and return the values, only the Key is used for this. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part.</inlineHelpText>
        <label>Hotel Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoPack_Institutional_Notification_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>InfoPack: Step: Institutional Notification: Captures Institutional Notification Information. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>InfoPack: Step: Institutional Notification: Captures Institutional Notification Information.</inlineHelpText>
        <label>InfoPack Institutional Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InfoPack_Payee_Information_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>InfoPack: Step: Payee Information: Captures Payee Name and Address. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>InfoPack: Step: Payee Information: Captures Payee Name and Address.</inlineHelpText>
        <label>InfoPack Payee Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InfoPack_Qualifications_Experience_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>InfoPack: Step: Qualifications: Captures the HCPs Qualifications and Experience. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>InfoPack: Step: Captures the HCPs qualifications.</inlineHelpText>
        <label>InfoPack Qualifications &amp; Experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Description_MERC__c</fullName>
        <description>Used to describe the rules or use case behind the specific Key record. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>Used to describe the rules or use case behind the specific Key record.</inlineHelpText>
        <label>Key Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_for_Lookup_MERC__c</fullName>
        <description>Derived from Input Criteria.  Will calculate the key for each rule.  This field is then used by the Web Service logic to lookup and display the right content based on the current state. Matched against Account and Meeting Participant &quot;Web Service Logic&quot; fields.  Oliver Dunford 12th May 2014.</description>
        <formula>IF(RecordType.Name = &quot;RSVP&quot;, 
	TEXT(Country_MERC__c) &amp; &quot;;&quot; &amp; 
	TEXT(Participant_Record_Type_MERC__c) &amp; &quot;;&quot; &amp; 
	TEXT(Account_Record_Type_MERC__c) &amp; &quot;;&quot; &amp; 
	TEXT(Meeting_Record_Type_MERC__c) &amp; &quot;;&quot; &amp; 
	TEXT(Hotel_Required_MERC__c) &amp; &quot;;&quot; &amp;  
	TEXT(Air_Required_MERC__c) &amp; &quot;;&quot; &amp;  
	TEXT(Transparency_Consent_Exists_MERC__c) &amp; &quot;;&quot;
, 
IF(RecordType.Name = &quot;HCP Info Package&quot;,
	TEXT(Country_MERC__c) &amp; &quot;;&quot;,&quot;&quot;)
)</formula>
        <inlineHelpText>The actual key compared to the logged in HCP Account Mercury record and also the Meeting Participant Record for a given Meeting Registration.</inlineHelpText>
        <label>Key for Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_for_Uniqueness_Check_MERC__c</fullName>
        <description>Stamped via workflow to ensure the uploaded Key is unique based on input criteria. Oliver Dunford 12th May 2014.  Must be unique.</description>
        <inlineHelpText>The Key that is looked up to determine the correct scenario.</inlineHelpText>
        <label>Key for Uniqueness Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meeting_Record_Type_MERC__c</fullName>
        <description>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part. Oliver Dunford 12th Yay 2014.</description>
        <inlineHelpText>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part.</inlineHelpText>
        <label>Meeting Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consulting Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Standard Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_Record_Type_MERC__c</fullName>
        <description>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part.  Not used to lookup and return the values, only the Key is used for this.  Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part.</inlineHelpText>
        <label>Participant Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSVP_Accommodation_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSVP: Step: Accommodation: Should Hotel be Required, captures the Check-In and Check-Out Dates.  Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>RSVP: Step: Accommodation: Should Hotel be Required, captures the Check-In and Check-Out Dates.</inlineHelpText>
        <label>RSVP Accommodation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSVP_Congress_Registration_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSVP: Step: Congress Registration: Registration modal should a HCP be attending an Independent Meeting. Used to capture Membership Id and Independent meeting details unique to Independent Meetings.  Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>RSVP: Step: Congress Registration: Used to capture Independent Meeting Registration Information such as Membership Id for Registration.</inlineHelpText>
        <label>RSVP Congress Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSVP_Dietary_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSVP: Step: Dietary Restrictions: Captures food and dietary restrictions. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>RSVP: Step: Dietary Restrictions: Captures any allergies or food restrictions.</inlineHelpText>
        <label>RSVP Dietary Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSVP_Emergency_Contact_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSVP: Step: Emergency Contact: Captures Emergency Contact Information. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>RSVP: Step: Emergency Contact: Captures Emergency Contact Information</inlineHelpText>
        <label>RSVP Emergency Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSVP_Institutional_Notification_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSVP: Step: Institutional Notification: Captures Institutional Notification Information for HCPs. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>RSVP: Step: Institutional Notification: Captures Institutional Notification Information for HCPs.</inlineHelpText>
        <label>RSVP Institutional Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSVP_Sponsorship_Agreement_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSVP: Step: Sponsorship Agreement: Captures Sponsorship Agreement Information for HCPs.  Oliver Dunford 12th May 2013.</description>
        <inlineHelpText>RSVP: Step: Sponsorship Agreement: Captures Sponsorship Agreement Information for HCPs</inlineHelpText>
        <label>RSVP Sponsorship Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSVP_Summary_and_Comments_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSVP: Step: Summary and Comments: The final summary of all populated information during the RSVP process. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>RSVP: Step: Summary and Comments: The final summary of all populated information during the RSVP process.</inlineHelpText>
        <label>RSVP Summary and Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSVP_Transparency_Reporting_Consent_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSVP: Step: Transparency Reporting Consent: Captures Transparency Reporting Consent. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>RSVP: Step: Transparency Reporting Consent: Captures the Transparency Reporting Consent Information.</inlineHelpText>
        <label>RSVP Transparency Reporting Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSVP_Travel_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSVP: Step: Travel: Should Travel be Required, captures Information such as preferred departure stations.</description>
        <inlineHelpText>RSVP: Step: Travel: Should Travel be Required, captures Information such as preferred departure stations.</inlineHelpText>
        <label>RSVP Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSVP_Welcome_Privacy_Consent_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSVP: Step: Welcome Privacy Consent: The generic Privacy Consent Module on the Welcome tab.   Used to ensure the HCP is aware of and consents to Lilly capturing information about them for the RSVP &amp; HCP Info Package Process.</description>
        <inlineHelpText>RSVP: Step: Welcome Privacy Consent: The generic Privacy Consent Module on the Welcome Tab.</inlineHelpText>
        <label>RSVP Welcome Privacy Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transparency_Consent_Exists_MERC__c</fullName>
        <description>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part. Not used to lookup and return the values, only the Key is used for this. Oliver Dunford 12th May 2014.</description>
        <inlineHelpText>Used to help organise and show the fields that make up the specific Key, used to generate the Key in part.</inlineHelpText>
        <label>Transparency Consent Exists</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Web Service Logic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Web Service Logic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Service Logic</pluralLabel>
    <recordTypes>
        <fullName>HCP_Info_Package_MERC</fullName>
        <active>true</active>
        <description>Used to organise all HCP Information Package web service tabs and according visibility.</description>
        <label>HCP Info Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSVP_MERC</fullName>
        <active>true</active>
        <description>Used to organise all RSVP portal tabs and according visibility.</description>
        <label>RSVP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>